# koudaixiangce

./: .env.sh  .gitignore  README.md  RapidRAW-Android-ARCHITECTURE.md  ci_log.txt  eslint.config.js  fix-any-pass2.cjs  fix-any-pass2.mjs  fix-any-pass3.cjs  fix-any-pass4.cjs  fix-any-pass5.cjs  fix-any-pass6.cjs  fix-any-pass7.cjs  fix-any-pass8.cjs  fix-any-pass9.cjs  fix-any.mjs  fix-imagecanvas.cjs  fix-imagecanvas2.cjs  fix-types-pass1.cjs  fix-types-pass2.cjs  fix-types-pass3.cjs  fix-types-pass4.cjs  fix-types-pass5.cjs  generate_luts.py  index.html  linux_log.txt  package-lock.json  package.json  pnpm-lock.yaml  release-v1.7.4.html  tsconfig.json  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_template.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml
AlcedoStudio/: build.gradle.kts  gradle.properties  init.gradle.kts  settings.gradle.kts
AlcedoStudio/app/: build.gradle.kts  proguard-rules.pro
PixelFruit-ref/app/: build.gradle.kts
RapidRAW-Android/: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL_STARTUP_TEST_CHECKLIST.md  build.gradle.kts  detekt-config.yml  generate_launcher_icons.py  gradle.properties  local.properties.template  settings.gradle.kts
RapidRAW-Android/.github/workflows/: build.yml  ci.yml
RapidRAW-Android/app/: build.gradle.kts  proguard-rules.pro  release.keystore.bak
RapidRAW-Android/app/src/main/cpp/: CMakeLists.txt  ai_inference.cpp  ai_inference_jni.cpp  native_crash_handler.cpp  native_crash_handler.h  raw_decoder_jni.cpp  vulkan_compute.cpp  vulkan_compute.h  vulkan_compute_jni.cpp
RapidRAW-Android/gradle/: libs.versions.toml
RapidRAW-Android/gradle/wrapper/: gradle-wrapper.properties
RapidRAW-Android/preview/: index.html
RapidRAW-Android/rust-core/: Cargo.toml
RapidRAW-Android/rust-core/.cargo/: config.toml
RapidRAW-Android/rust-core/assets/: lens_profiles.json
RapidRAW-Android/rust-core/src/: android.rs  color.rs  decode.rs  exif.rs  export.rs  lens.rs  lib.rs  process.rs  types.rs
RapidRAW-Android/scripts/: generate-release-keystore.sh
RapidRAW-upstream/: .gitignore  .gitmodules  .npmrc  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json
RapidRAW-upstream/.github/: pull_request_template.md
RapidRAW-upstream/.github/ISSUE_TEMPLATE/: bug_template.yml
RapidRAW-upstream/.github/workflows/: build.yml  ci.yml  lint.yml  release.yml
RapidRAW-upstream/src/: App.tsx  main.tsx  styles.css
RapidRAW-upstream/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
RapidRAW-upstream/src-tauri/capabilities/: default.json
RapidRAW-upstream/src-tauri/icons/: icon.icns
RapidRAW-upstream/src-tauri/src/: adjustment_transfer.rs  adjustment_utils.rs  ai_commands.rs  ai_connector.rs  ai_processing.rs  android_integration.rs  app_settings.rs  app_state.rs  culling.rs  denoising.rs  exif_processing.rs  export_processing.rs  file_management.rs  gpu_processing.rs  image_loader.rs  image_processing.rs  lens_correction.rs  lib.rs  lut_processing.rs  mask_generation.rs  model_manager.rs  negative_conversion.rs  panorama_stitching.rs  preset_converter.rs  semantic_search.rs  tagging.rs  window_customizer.rs
RapidRAW-upstream/src/context/: ContextMenuContext.tsx  TaggingSubMenu.tsx
RapidRAW-upstream/src/hooks/: useAdjustmentTransfer.ts  useAiMasking.ts  useAppContextMenus.ts  useAppInitialization.ts  useAppNavigation.ts  useEditorActions.ts  useFileOperations.ts  useImageLoader.ts  useKeyboardShortcuts.ts  useLibraryActions.ts  useModelManager.ts  usePresets.ts  useSemanticSearch.ts  useSortedLibrary.ts  useTauriListeners.ts
RapidRAW-upstream/src/i18n/: index.ts
packaging/: cargo-sources.json  node-sources.json
rapidraw-preview/: app.js  index.html  style.css
rr/: ai_connector.rs  exif_processing.rs  gpu_processing.rs  lib.rs  tagging.rs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adjustment_utils.rs  ai_color_match.rs  ai_commands.rs  ai_connector.rs  ai_processing.rs  android_integration.rs  app_settings.rs  app_state.rs  cache_utils.rs  camera_profiles.rs  color_science.rs  color_science_commands.rs  creative_tools.rs  culling.rs  denoising.rs  exif_processing.rs  export_processing.rs  face_reshaping.rs  file_management.rs  formats.rs  gpu_processing.rs  hair_retouching.rs  hdr_processing.rs  image_loader.rs  image_processing.rs  inpainting.rs  lens_correction.rs  lib.rs  liquify.rs  lut_processing.rs  mask_generation.rs  monochrome_correction.rs  negative_conversion.rs  panorama_stitching.rs  portrait_detection.rs  preset_converter.rs  raw_processing.rs  retouching_commands.rs  skin_retouching.rs  sky_replacement.rs  (+3 more)
src-tauri/tests/: cache_integration_test.rs  formats_integration_test.rs
src/@types/: i18next.d.ts
src/components/ui/: Text.tsx  (+15 more)
src/context/: ContextMenuContext.tsx  TaggingSubMenu.tsx
src/hooks/: useAdvancedSearch.ts  useAiAnalysis.ts  useAiMasking.ts  useAndroidBackHandler.ts  useAppContextMenus.ts  useAppInitialization.ts  useAppNavigation.ts  useClerkFallback.ts  useClerkFallback.tsx  useEditorActions.ts  useExternalEditSession.ts  useFileOperations.ts  useImageLoader.ts  useImageProcessing.ts  useImageRenderSize.ts  useKeyboardShortcuts.ts  useLibraryActions.ts  useLongPress.ts  useMobileLayout.ts  usePresets.ts  useProductivityActions.ts  useRetouching.ts  useSmartAlbums.ts  useSortedLibrary.ts  useTauriListeners.ts  useThumbnails.ts
src/lib/: i18n-helpers.ts
src/store/: useEditorStore.test.ts  useEditorStore.ts  useLibraryStore.test.ts  useLibraryStore.ts  useProcessStore.test.ts  useSettingsStore.test.ts  useSettingsStore.ts  useUIStore.test.ts  useUIStore.ts
src/types/: tauri.d.ts  typography.ts
src/utils/: ImageLRUCache.test.ts  ImageLRUCache.ts  adjustments.test.ts  adjustments.ts  androidSaf.ts  coordTransform.ts  cropUtils.test.ts  cropUtils.ts  frontendLogBridge.ts  keyboardUtils.test.ts  maskUtils.test.ts  maskUtils.ts  themes.test.ts  themes.ts
(+640 files in other folders)
